<resources>
    <string name="app_name">Simply Run</string>
    <string name="action_settings">Settings</string>
    <string name="logo_img_string">logo</string>
    <string name="start_run_tv">Comienza a correr!</string>
    <string name="title_activity_my_tabbed">MyTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="begin_button">Comenzar!</string>
    <string name="default_speed">0min/km</string>
    <string name="speed_textview">Velocidad</string>
    <string name="default_distance">0m</string>
    <string name="distance_textview">Distancia</string>
    <string name="time_elapsed_textview">Tiempo</string>
    <string name="stop_button">Parar</string>
    <string name="start_button">Iniciar</string>
    <string name="pause_button">Pausar</string>
    <string name="title_activity_nav_draw">NavDraw</string>
    <string name="prefs_theme_key">theme</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="history_string">Historial</string>
    <string name="tools_string">Herramientas</string>
    <string name="my_running_app_string">Simply Run</string>
    <string name="lock_string">Bloquear</string>
    <string name="run_textview">Actividad # </string>
    <string name="date_textview">Fecha: </string>
    <string name="distanceh_textview">Distancia: </string>
    <string name="timeh_textview">Tiempo: </string>
    <string name="avgspeedh">Velocidad Prom.: </string>
    <string name="topspeedh">Velocidad Max.:</string>
    <string name="delete_all">Eliminar todo</string>
    <string name="alt_changeh">Cambio Altitud:</string>
    <string name="dialog_are_you_sure_delete_entries">Estas seguro que quieres <b>ELIMINAR</b> todas las entradas?</string>
    <string name="dialog_delete">Eliminar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_entry">Eliminar esta entrada</string>
    <string name="dialog_stop_run">Quieres detener esta actividad?</string>
    <string name="dialog_stop">Detener</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
