<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.simpleapps.amg.myrunningapp.MainActivity"
    tools:showIn="@layout/activity_nav_draw"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:transitionGroup="false">
<!-- -->
    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewFlipper"
        android:layout_gravity="center">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/start_run_tv"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:id="@+id/startActivityTV" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgLogo"
                    android:src="@drawable/my_icon"
                    android:contentDescription="@string/logo_img_string" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:text="@string/begin_button"
                android:id="@+id/beginButton"
                android:layout_gravity="center_horizontal"
                android:background="@color/materialGray"
                android:textSize="25sp"
                android:onClick="goRight"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_elapsed_textview"
                android:textSize="25sp"
                android:id="@+id/displayTimeElapsedTV" />

            <com.simpleapps.amg.myrunningapp.msChronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dchronometer"
                android:textSize="75sp"
                android:layout_gravity="center_horizontal"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/distance_textview"
                android:textSize="25sp"
                android:id="@+id/displayDistanceTV" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/default_distance"
                android:textSize="75sp"
                android:id="@+id/distanceTV"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/speed_textview"
                android:textSize="25sp"
                android:id="@+id/displaySpeedTV" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/default_speed"
                android:textSize="75sp"
                android:id="@+id/speedTV"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="76dp"
                    android:text="@string/start_button"
                    android:background="@color/materialGreen"
                    android:id="@+id/startPauseButton"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp"
                    android:onClick="startPauseRun"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="76dp"
                    android:text="@string/stop_button"
                    android:background="@color/materialRed"
                    android:id="@+id/stopButton"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp"
                    android:onClick="stopRun" />

            </LinearLayout>



        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/date_textview"
                    android:textSize="30sp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textStyle="bold"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/space"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="00/00/0000"
                    android:id="@+id/runDateDetail"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:layout_below="@+id/space"
                    android:layout_toRightOf="@+id/textView3"
                    android:layout_toEndOf="@+id/textView3" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_below="@+id/runIdDetail"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/space" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/distanceh_textview"
                    android:id="@+id/textView5"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/space2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/space2"
                    android:layout_below="@+id/textView3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0000m"
                    android:id="@+id/runDistanceDetail"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:layout_alignBottom="@+id/textView5"
                    android:layout_toRightOf="@+id/textView5"
                    android:layout_toEndOf="@+id/textView5" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/space3"
                    android:layout_below="@+id/textView5"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/timeh_textview"
                    android:id="@+id/textView4"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/space3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="00:00:00"
                    android:id="@+id/runTimeDetail"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:layout_alignBottom="@+id/textView4"
                    android:layout_toRightOf="@+id/textView4"
                    android:layout_toEndOf="@+id/textView4" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/space4"
                    android:layout_below="@+id/textView4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/avgspeedh"
                    android:id="@+id/textView2"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/space4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0.0 m/s"
                    android:id="@+id/runAvgSpeedDetail"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:layout_alignBottom="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:layout_toEndOf="@+id/textView2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/space5"
                    android:layout_below="@+id/textView2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/topspeedh"
                    android:id="@+id/textView6"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/space5"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0.0 m/s"
                    android:id="@+id/runTopSpeedDetail"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:layout_below="@+id/space5"
                    android:layout_toRightOf="@+id/textView6"
                    android:layout_toEndOf="@+id/textView6" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/space6"
                    android:layout_below="@+id/textView6"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alt_changeh"
                    android:id="@+id/textView7"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/space6"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0.0 m/s"
                    android:id="@+id/runAltChangeDetail"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="30sp"
                    android:layout_below="@+id/space6"
                    android:layout_toRightOf="@+id/textView7"
                    android:layout_toEndOf="@+id/textView7" />

            </RelativeLayout>
        </ScrollView>
    </ViewFlipper>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#be616161"
        android:id="@+id/top_layout">

        <!--Put the parts of the layout here,
        what should be on top of your activity-->

    </LinearLayout>

</FrameLayout>
